--- a/functions/package.json
+++ b/functions/package.json
@@ -8,16 +8,17 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy:functions": "eslint --fix --ext .js,.ts . && firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test:welcome-message": "mocha --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/chat/welcome-message.ts"
   },
   "engines": {
     "node": "16"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "dayjs": "^1.11.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.0.2",
-    "dayjs": "^1.11.3"
+    "firebase-functions": "^4.0.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
@@ -29,6 +30,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^0.2.0",
+    "load-json-file": "^7.0.1",
     "mocha": "^10.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.4"
