--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
     "serve": "npm run build && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy:functions": "eslint --fix --ext .js,.ts . && firebase deploy --only functions",
+    "deploy:functions": "eslint --fix --ext .js,.ts . && npm run deploy",
+    "deploy": "firebase deploy --only functions:onUserCreate,functions:onUserUpdate,functions:onPostCreate,functions:onPostUpdate,functions:onCommentCreate,functions:onCommentUpdate,functions:onChatMessageCreate,functions:sendMessage,functions:messagingOnPostCreate,functions:messagingOnCommentCreate,functions:pushNotificationQueue",
     "logs": "firebase functions:log",
     "test:welcome-message": "mocha --timeout 10000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/chat/welcome-message.ts",
     "test:post.check-delete": "mocha --timeout 10000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/forum/post.check-delete.ts",
