--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,8 +6,14 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "lib": [
+      // ... other libs
+      "ES2021.String"
+    ]
   },
   "compileOnSave": true,
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
