--- a/functions/package.json
+++ b/functions/package.json
@@ -2,13 +2,14 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "eslint --fix --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy:functions": "eslint --fix --ext .js,.ts . && npm run deploy",
-    "deploy": "firebase deploy --only functions:onUserCreate,functions:onUserUpdate,functions:onPostCreate,functions:onPostUpdate,functions:onCommentCreate,functions:onCommentUpdate,functions:onChatMessageCreate,functions:sendMessage,functions:messagingOnPostCreate,functions:messagingOnCommentCreate,functions:pushNotificationQueue,functions:messagingOnChatMessageCreate",
+    "deploy": "firebase deploy --only functions:onUserCreate,functions:onUserUpdate,functions:onPostCreate,functions:onPostUpdate,functions:onCommentCreate,functions:onCommentUpdate,functions:onChatMessageCreate,functions:sendMessage,functions:messagingOnPostCreate,functions:messagingOnCommentCreate,functions:pushNotificationQueue,functions:messagingOnChatMessageCreate,functions:onUserStatusChanged",
     "logs": "firebase functions:log",
     "test:sendMessageWithActions": "mocha  --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-with-actions.ts",
     "test:sendMessageWithTokens": "mocha  --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-with-tokens.ts",
