--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
     "start": "npm run shell",
     "deploy:functions": "eslint --fix --ext .js,.ts . && npm run deploy",
     "deploy": "firebase deploy --only functions:onUserCreate,functions:onUserUpdate,functions:onPostCreate,functions:onPostUpdate,functions:onCommentCreate,functions:onCommentUpdate,functions:onChatMessageCreate,functions:messagingOnPostCreate,functions:messagingOnCommentCreate,functions:pushNotificationQueue,functions:messagingOnChatMessageCreate,functions:onUserStatusChanged,functions:sendPushNotificationsOnCreate",
+    "deploy:functions:ai": "eslint --fix --ext .js,.ts . && firebase deploy --only functions:ai",
     "logs": "firebase functions:log",
     "test:sendMessageWithActions": "mocha  --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-with-actions.ts",
     "test:sendMessageWithTokens": "mocha  --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-with-tokens.ts",
@@ -22,7 +23,8 @@
     "test:upload:update-target-reference": "mocha --timeout 10000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/upload/update-target-reference.spec.ts",
     "test:getOtherUserUidsFromChatMessageDocument": "mocha --timeout 10000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/chat/getOtherUserUidsFromChatMessageDocument.ts",
     "test:push:test": "mocha --timeout 10000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-to-a-token.spec.ts",
-    "test:send-push-notification-user-refs": "mocha --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-push-notification-user-refs.ts"
+    "test:send-push-notification-user-refs": "mocha --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-push-notification-user-refs.ts",
+    "test:ai": "mocha --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/ai/ai.ts"
   },
   "engines": {
     "node": "16"
