--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "start": "npm run shell",
     "deploy:functions": "eslint --fix --ext .js,.ts . && npm run deploy",
     "deploy": "firebase deploy --only functions:onUserCreate,functions:onUserUpdate,functions:onPostCreate,functions:onPostUpdate,functions:onCommentCreate,functions:onCommentUpdate,functions:onChatMessageCreate,functions:messagingOnPostCreate,functions:messagingOnCommentCreate,functions:pushNotificationQueue,functions:messagingOnChatMessageCreate,functions:onUserStatusChanged,functions:sendPushNotificationsOnCreate",
-    "deploy:functions:ai": "eslint --fix --ext .js,.ts . && firebase deploy --only functions:ai",
+    "deploy:functions:gpt": "eslint --fix --ext .js,.ts . && firebase deploy --only functions:onGptCreate",
     "logs": "firebase functions:log",
     "test:sendMessageWithActions": "mocha  --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-with-actions.ts",
     "test:sendMessageWithTokens": "mocha  --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-with-tokens.ts",
@@ -24,7 +24,7 @@
     "test:getOtherUserUidsFromChatMessageDocument": "mocha --timeout 10000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/chat/getOtherUserUidsFromChatMessageDocument.ts",
     "test:push:test": "mocha --timeout 10000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-message-to-a-token.spec.ts",
     "test:send-push-notification-user-refs": "mocha --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/messaging/send-push-notification-user-refs.ts",
-    "test:ai": "mocha --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/ai/ai.ts"
+    "test:gpt": "mocha --timeout 200000 --require ts-node/register --watch --watch-files src/**/*.ts,tests/**/*.ts tests/gpt/gpt.spec.ts"
   },
   "engines": {
     "node": "16"
@@ -32,7 +32,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.0.2"
+    "firebase-functions": "^4.1.1",
+    "openai": "^3.1.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
